# antrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: anndata.rs  brute_force.rs  error.rs  lib.rs  main.rs  obs.rs
static/: compressed.h5ad  layers.h5ad
tests/: gen_compressed_h5ad.py  gen_layers_h5ad.py
